Fix Stream.toList() incompatibility with Java 11-#4